# lazy

./: .gitignore  Cargo.toml  Doxyfile  LICENSE  README.md  a  build.ninja  issues.txt  lang.txt
snippets/: 00_base_main.zy  01_assn.zy  03_trait_imp.zy  04_extended_operators.zy  05_counter_ns.zy  06_type_alias.zy  07_struct_stuff.zy  08_codegen.zy  10_read_source.zy  11_import_std.zy  12_structs.zy  13_struct_generic.zy  14_slice.zy  15_namespace.zy  16_namespaces.zy  17_string_and_char_escapes.zy  18_control_flow.zy  19_class_methods.zy  20_hang.zy  bare_bones.zy  std.zy
snippets/std/: index.zy  libc.zy
src/: aster.rs  colors.rs  compiler.rs  debug.rs  error.rs  help.rs  logger.rs  main.cpp  main.rs  todo.rs  workflow.rs
src/ArgumentParser/: ArgumentParser.cpp  ArgumentParser.hpp  InputOutputFileParser.cpp  InputOutputFileParser.hpp
src/arg_parser/: error.rs  mod.rs
src/aster/: ast.rs  consts.rs  errors.rs  intrinsics.rs  make.rs  mod.rs  seek_read.rs  source_reader.rs  to_string.rs
src/asterizer/: error.rs  mod.rs
src/codegen/: binary.rs  binding.rs  errors.rs  expression.rs  function.rs  literal.rs  metadatatype.rs  mod.rs  namespace.rs  type.rs  unary.rs
tests/: 00_base_main.zy  01_assn.zy  02_hello_world.zy  03_trait_imp.zy  04_extended_operators.zy  05_counter_ns.zy  06_type_alias.zy  07_struct_stuff.zy  08_codegen.zy  09_extern.zy  10_read_source.zy  11_import_export.zy  11_import_std.zy  12_structs.zy  13_struct_generic.ty  14_slice.zy  bare_bones.zy  counter.zy  counter_ns.zy  hello_world.zy  if.zy  message.zy  namespaces.zy  std.zy  string_ref.zy
(+157 files in other folders)
