[package]
name = "lazy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
snafu = "0.7.5"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }
enum-iterator = "1.4.1"
inkwell = { version = "0.2.0", features = ["llvm10-0"] }
