[package]
name = "lazy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
snafu = "0.7.5"
inkwell = { version = "0.2.0", features = ["llvm10-0"] }
utf8-read = "0.4.0"
typename = "0.1.2"
enum-iterator = "2.0.0"
